--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "last 5 Opera versions"
   ],
   "engines": {
-    "node": ">= 12.22.1",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
+    "node": "16.13.0",
+    "npm": "8.1.0",
+    "yarn": "1.22.17"
   }
 }
